--- a/you-say!/you-say!/Storyboards/NewQuestion.storyboard
+++ b/you-say!/you-say!/Storyboards/NewQuestion.storyboard
@@ -43,7 +43,7 @@
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="PnU-05-59O"/>
-                                    <constraint firstAttribute="width" constant="382" id="kiu-3w-sMl"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="382" id="kiu-3w-sMl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <state key="normal" title=" Nueva pregunta">
@@ -62,12 +62,14 @@
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="HWW-Iv-Geb" secondAttribute="bottom" constant="-2" id="0CL-BH-CX1"/>
                             <constraint firstItem="HWW-Iv-Geb" firstAttribute="trailing" secondItem="i36-Gn-2cd" secondAttribute="trailing" id="HDC-g2-EuN"/>
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" id="QhX-4o-QSQ"/>
+                            <constraint firstItem="pts-4d-2Ez" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" constant="16" id="TCE-aa-e1z"/>
                             <constraint firstItem="i36-Gn-2cd" firstAttribute="bottom" secondItem="pts-4d-2Ez" secondAttribute="bottom" constant="8" id="W9z-nC-D3Z"/>
                             <constraint firstItem="pts-4d-2Ez" firstAttribute="top" secondItem="hdx-4G-mhq" secondAttribute="bottom" constant="8" id="WvZ-0f-dtu"/>
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="trailing" secondItem="i36-Gn-2cd" secondAttribute="trailing" id="ZDc-hP-s4m"/>
                             <constraint firstItem="pts-4d-2Ez" firstAttribute="centerX" secondItem="i36-Gn-2cd" secondAttribute="centerX" id="bdn-lt-kgq"/>
                             <constraint firstItem="HWW-Iv-Geb" firstAttribute="top" secondItem="i36-Gn-2cd" secondAttribute="top" id="fuV-kd-TYc"/>
                             <constraint firstItem="HWW-Iv-Geb" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" id="pau-ZQ-CPO"/>
+                            <constraint firstItem="i36-Gn-2cd" firstAttribute="trailing" secondItem="pts-4d-2Ez" secondAttribute="trailing" constant="16" id="xMG-MX-DxR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="i36-Gn-2cd"/>
                     </view>
