--- a/you-say!/you-say!/Storyboards/Settings.storyboard
+++ b/you-say!/you-say!/Storyboards/Settings.storyboard
@@ -602,33 +602,85 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pantalla de ayuda" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09n-JX-DVb">
-                                <rect key="frame" x="139.5" y="332" width="135" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYb-Q2-97e">
-                                <rect key="frame" x="176" y="803" width="62" height="30"/>
-                                <state key="normal" title="Regresar"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNS-sE-Ydc">
+                                <rect key="frame" x="16" y="785" width="382" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="382" id="fF0-Fg-4rw"/>
+                                    <constraint firstAttribute="height" constant="50" id="pgM-5E-0xa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Regresar">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="cornerRadius" value="25"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="botonRegresarPresionado:" destination="dxS-yb-p3m" eventType="touchUpInside" id="niS-cx-Hhs"/>
+                                    <action selector="backButtonPressed:" destination="dxS-yb-p3m" eventType="touchUpInside" id="wvJ-Gl-YYq"/>
+                                    <action selector="backButtonPressed:" destination="Mxm-7c-QCc" eventType="touchUpInside" id="xKp-DO-8VD"/>
+                                    <action selector="saveButtonPressed:" destination="oe5-wD-dO2" eventType="touchUpInside" id="QOm-Hs-O3D"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rEc-cI-Ko7" customClass="DesignableView" customModule="you_say_" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="414" height="95"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="align" translatesAutoresizingMaskIntoConstraints="NO" id="rPv-xW-teq">
+                                        <rect key="frame" x="368" y="37" width="28" height="28"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="5ou-vO-6lA"/>
+                                            <constraint firstAttribute="width" constant="28" id="UsE-N3-MXv"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿Qué es You-Say?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KC-Bg-La1">
+                                        <rect key="frame" x="139" y="40" width="155" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="95" id="CJI-pm-n6A"/>
+                                    <constraint firstItem="1KC-Bg-La1" firstAttribute="top" secondItem="rEc-cI-Ko7" secondAttribute="top" constant="40" id="Keb-VQ-xco"/>
+                                    <constraint firstItem="rPv-xW-teq" firstAttribute="top" secondItem="rEc-cI-Ko7" secondAttribute="top" constant="37" id="bkf-Uf-fAa"/>
+                                    <constraint firstItem="rPv-xW-teq" firstAttribute="leading" secondItem="1KC-Bg-La1" secondAttribute="trailing" constant="74" id="itu-TS-vDz"/>
+                                    <constraint firstAttribute="trailing" secondItem="rPv-xW-teq" secondAttribute="trailing" constant="18" id="yLQ-G6-EBI"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" minimumZoomScale="2" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3H8-hv-a5e">
+                                <rect key="frame" x="20" y="147" width="374" height="576"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Esta aplicación va dirigida a un público general mayor de 18 años.
+
+Aquí podrás realizar preguntas para obtener consejos y sugerencias de  cualquier usuario registrado.
+
+Al realizar una pregunta podrás seleccionar la ubicación y un radio máximo del que quieras recibir respuestas, esto te permite filtrar resultados de tu localidad o región actual.
+
+Siempre que quieras obtener opiniones de manera rápida de usuarios dispuestos a darlas, podrás contar con You-Say!</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="09n-JX-DVb" firstAttribute="top" secondItem="m5T-QE-dU6" secondAttribute="top" constant="288" id="Ax0-J7-vaO"/>
-                            <constraint firstItem="gYb-Q2-97e" firstAttribute="centerX" secondItem="liP-9h-idz" secondAttribute="centerX" id="bGz-zM-GHJ"/>
-                            <constraint firstItem="gYb-Q2-97e" firstAttribute="centerX" secondItem="09n-JX-DVb" secondAttribute="centerX" id="jig-jM-cI2"/>
-                            <constraint firstItem="m5T-QE-dU6" firstAttribute="bottom" secondItem="gYb-Q2-97e" secondAttribute="bottom" constant="29" id="w7w-SJ-Cvf"/>
+                            <constraint firstItem="m5T-QE-dU6" firstAttribute="bottom" secondItem="uNS-sE-Ydc" secondAttribute="bottom" constant="27" id="5Qw-ht-duE"/>
+                            <constraint firstItem="3H8-hv-a5e" firstAttribute="leading" secondItem="m5T-QE-dU6" secondAttribute="leading" constant="20" id="Beh-ik-7pc"/>
+                            <constraint firstItem="uNS-sE-Ydc" firstAttribute="top" secondItem="3H8-hv-a5e" secondAttribute="bottom" constant="62" id="F80-Ch-kiX"/>
+                            <constraint firstItem="m5T-QE-dU6" firstAttribute="trailing" secondItem="3H8-hv-a5e" secondAttribute="trailing" constant="20" id="YM7-mr-upe"/>
+                            <constraint firstItem="rEc-cI-Ko7" firstAttribute="trailing" secondItem="m5T-QE-dU6" secondAttribute="trailing" id="fj3-1g-i9x"/>
+                            <constraint firstItem="3H8-hv-a5e" firstAttribute="top" secondItem="rEc-cI-Ko7" secondAttribute="bottom" constant="8" id="qLX-ig-8LM"/>
+                            <constraint firstItem="rEc-cI-Ko7" firstAttribute="leading" secondItem="m5T-QE-dU6" secondAttribute="leading" id="ruN-98-OOP"/>
+                            <constraint firstItem="rEc-cI-Ko7" firstAttribute="top" secondItem="m5T-QE-dU6" secondAttribute="top" id="s65-6Q-WMj"/>
+                            <constraint firstItem="m5T-QE-dU6" firstAttribute="trailing" secondItem="uNS-sE-Ydc" secondAttribute="trailing" constant="16" id="s6s-LX-PTm"/>
+                            <constraint firstItem="uNS-sE-Ydc" firstAttribute="leading" secondItem="m5T-QE-dU6" secondAttribute="leading" constant="16" id="s8Z-0h-h4h"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="m5T-QE-dU6"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="47T-Xv-sBc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-346" y="1988"/>
+            <point key="canvasLocation" x="-346.37681159420293" y="1987.5"/>
         </scene>
     </scenes>
     <resources>
